--- a/src/index.css
+++ b/src/index.css
@@ -60,12 +60,18 @@ form {
   max-width: 480px;
 }
 
-h1 {
+h1,
+label span {
   font-size: 24px;
   font-weight: 500;
   line-height: 36px;
 }
 
+h1 span {
+  display: block;
+}
+
+h1 span,
 h2,
 label,
 button {
@@ -74,10 +80,6 @@ button {
   line-height: 27px;
   padding: 10px 10px 10px 0;
 }
-
-/* p {
-  width: 100%;
-} */
 
 form > label {
   padding-bottom: 20px;
@@ -110,7 +112,8 @@ button {
   font-size: var(--font-size);
 }
 
-input[type="checkbox"] {
+input[type="checkbox"], 
+input[type="radio"] {
   margin: 10px;
 }
 
@@ -128,6 +131,16 @@ button:hover {
 
 button:invalid {
   background-color: grey;
+}
+
+.result li {
+  padding: 1rem 0;
+}
+
+.result li span {
+  font-weight: 600;
+  color: var(--primary-color);
+  display: block;
 }
 
 @media all and (min-width: 668) {
